--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "VetDir",
+  "name": "vetdir",
   "version": "1.0.0",
   "description": "VetDir PhoneGap Android App",
   "main": "index.js",
@@ -11,20 +11,24 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/jpruiz114/vet-dir-app.git"
+    "url": "git+https://github.com/jpruiz114/vet-dir-app.git"
   },
   "author": "Jean Paul Ruiz <jpruiz114@gmail.com>",
-  "license": "ISC",
   "bugs": {
     "url": "https://github.com/jpruiz114/vet-dir-app/issues"
   },
   "homepage": "https://github.com/jpruiz114/vet-dir-app",
   "devDependencies": {
+    "grunt": "^0.4.5",
     "grunt-contrib-csslint": "^0.5.0",
     "grunt-contrib-sass": "^0.9.2",
     "grunt-html-validation": "^0.1.18",
     "grunt-jsvalidate": "*",
     "grunt-xml-validator": "^1.1.2",
     "load-grunt-tasks": "^3.3.0"
-  }
+  },
+  "keywords": [
+    "pet",
+    "services"
+  ]
 }
