--- a/package.json
+++ b/package.json
@@ -3,9 +3,6 @@
   "version": "1.0.0",
   "description": "VetDir PhoneGap Android App",
   "main": "index.js",
-  "dependencies": {
-    "grunt-jsonlint": "^1.0.6"
-  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -23,6 +20,7 @@
     "grunt-contrib-csslint": "^0.5.0",
     "grunt-contrib-sass": "^0.9.2",
     "grunt-html-validation": "^0.1.18",
+    "grunt-jsonlint": "^1.0.6",
     "grunt-jsvalidate": "*",
     "grunt-xml-validator": "^1.1.2",
     "load-grunt-tasks": "^3.3.0"
