--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "homepage": "https://github.com/jpruiz114/vet-dir-app",
   "devDependencies": {
     "grunt": "^0.4.5",
+    "grunt-contrib-copy": "^0.8.2",
     "grunt-contrib-csslint": "^0.5.0",
     "grunt-contrib-sass": "^0.9.2",
     "grunt-html-validation": "^0.1.18",
