--- a/package.json
+++ b/package.json
@@ -16,14 +16,27 @@
   },
   "homepage": "https://github.com/jpruiz114/vet-dir-app",
   "devDependencies": {
+    "chai": "^3.5.0",
     "grunt": "^0.4.5",
     "grunt-contrib-copy": "^0.8.2",
     "grunt-contrib-csslint": "^0.5.0",
     "grunt-contrib-sass": "^0.9.2",
     "grunt-jsonlint": "^1.0.6",
     "grunt-jsvalidate": "*",
+    "grunt-karma": "^0.12.1",
     "grunt-xml-validator": "^1.1.2",
-    "load-grunt-tasks": "^3.3.0"
+    "karma": "^0.13.19",
+    "karma-chai": "^0.1.0",
+    "karma-firefox-launcher": "^0.1.7",
+    "karma-mocha": "^0.2.1",
+    "karma-phantomjs-launcher": "^1.0.0",
+    "karma-sinon": "^1.0.4",
+    "karma-verbose-reporter": "0.0.3",
+    "load-grunt-tasks": "^3.3.0",
+    "mocha": "^2.4.4",
+    "phantomjs": "^2.1.3",
+    "phantomjs-prebuilt": "^2.1.3",
+    "sinon": "^1.17.3"
   },
   "keywords": [
     "pet",
